# SPE

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  updater.rs
src/engine/: config.rs  context.rs  event.rs  graphics.rs  input.rs  mod.rs  shaders.rs  time.rs  updater.rs
src/engine/context/: config.rs  graphics.rs  input.rs  mod.rs  time.rs
src/engine/context/graphics/: mod.rs  renderer.rs
src/engine/context/graphics/meshes/: cube.comp  cube.rs  mod.rs  rect.rs  triangle.rs
src/engine/graphics/: meshes.rs  objects.rs
