[package]
name = "SPE"
version = "0.0.4"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
vulkano = "*"
vulkano-shaders = "*"
winit = { version = "0.29.11", features = ["default", "rwh_05"] }
glam = "*"
self_update = {version = "*", features = ["default", "archive-tar"]}
tempfile = "*"
reqwest = "*"