[package]
name = "SPE"
version = "0.0.8"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
# Graphics && Window handle
vulkano = "*"
vulkano-shaders = "*"
winit = { version = "0.29.14", features = ["default", "rwh_05"] }
tinyfiledialogs = "*"
glam = "*"

# Updater
self_update = {version = "*", features = ["default", "archive-tar"]}
include_dir = "*"
tempfile = "3.10.1"
reqwest = "*"