[package]
name = "SPE"
version = "0.0.8"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
# Graphics && Window handle
vulkano = "*"
vulkano-shaders = "*"
winit = { version = "*", features = ["default", "rwh_05", "serde"] }
tinyfiledialogs = "*"
glam = "*"

# Updater
self_update = {version = "*", features = ["default", "archive-tar"]}
include_dir = "*"
tempfile = "*"
reqwest = "*"

# Files
serde_json = "*"
serde = { version = "*", features = ["derive"] }